@@ -111,6 +111,10 @@ static void	user1_signal_handler(int sig, siginfo_t *siginfo, void *context)
 	{
 		common_sigusr_handler(flags);
 	}
+	else if (NULL == threads)
+	{
+		zabbix_log(LOG_LEVEL_ERR, "cannot redirect signal: shutdown in progress");
+	}
 	else if (ZBX_RTC_CONFIG_CACHE_RELOAD == ZBX_RTC_GET_MSG(flags))
 	{
 		extern unsigned char	daemon_type;
@@ -138,13 +142,10 @@ static void	user1_signal_handler(int sig, siginfo_t *siginfo, void *context)
 			if (-1 != sigqueue(threads[i], SIGUSR1, s))
 				zabbix_log(LOG_LEVEL_DEBUG, "the signal was redirected to the configuration syncer");
 			else
-				zabbix_log(LOG_LEVEL_ERR, "failed to redirect signal: %s", zbx_strerror(errno));
+				zabbix_log(LOG_LEVEL_ERR, "cannot redirect signal: %s", zbx_strerror(errno));
 		}
 		else
-		{
-			zabbix_log(LOG_LEVEL_ERR, "failed to redirect signal to configuration syncer:"
-					" process not found");
-		}
+			zabbix_log(LOG_LEVEL_ERR, "cannot redirect signal to configuration syncer: process not found");
 	}
 	else if (ZBX_RTC_LOG_LEVEL_INCREASE == ZBX_RTC_GET_MSG(flags) ||
 			ZBX_RTC_LOG_LEVEL_DECREASE == ZBX_RTC_GET_MSG(flags))
@@ -166,13 +167,13 @@ static void	user1_signal_handler(int sig, siginfo_t *siginfo, void *context)
 							threads[i]);
 				}
 				else
-					zabbix_log(LOG_LEVEL_ERR, "failed to redirect signal: %s", zbx_strerror(errno));
+					zabbix_log(LOG_LEVEL_ERR, "cannot redirect signal: %s", zbx_strerror(errno));
 			}
 
 			if (0 != ZBX_RTC_GET_DATA(flags) && 0 == found)
 			{
-				zabbix_log(LOG_LEVEL_ERR, "failed to redirect signal: process pid:%d is not a Zabbix"
-						" child process", ZBX_RTC_GET_DATA(flags));
+				zabbix_log(LOG_LEVEL_ERR, "cannot redirect signal: process pid:%d is not a Zabbix child"
+						" process", ZBX_RTC_GET_DATA(flags));
 			}
 		}
 		else
@@ -202,20 +203,20 @@ static void	user1_signal_handler(int sig, siginfo_t *siginfo, void *context)
 							" pid:%d", get_process_type_string(process_type), threads[i]);
 				}
 				else
-					zabbix_log(LOG_LEVEL_ERR, "failed to redirect signal: %s", zbx_strerror(errno));
+					zabbix_log(LOG_LEVEL_ERR, "cannot redirect signal: %s", zbx_strerror(errno));
 			}
 
 			if (0 == found)
 			{
 				if (0 == ZBX_RTC_GET_DATA(flags))
 				{
-					zabbix_log(LOG_LEVEL_ERR, "failed to redirect signal:"
+					zabbix_log(LOG_LEVEL_ERR, "cannot redirect signal:"
 							" \"%s\" process does not exist",
 							get_process_type_string(ZBX_RTC_GET_SCOPE(flags)));
 				}
 				else
 				{
-					zabbix_log(LOG_LEVEL_ERR, "failed to redirect signal:"
+					zabbix_log(LOG_LEVEL_ERR, "cannot redirect signal:"
 							" \"%s #%d\" process does not exist",
 							get_process_type_string(ZBX_RTC_GET_SCOPE(flags)),
 							ZBX_RTC_GET_DATA(flags));
