@@ -4,6 +4,7 @@ New features:
 A.F....... [ZBX-1357] updated Japanese, Polish and Ukrainian translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+...G...PS. [ZBX-8724] fixed daemon crash when a runtime control is issued during shutdown (asaveljevs)
 
 --------------------------------------------------------------------------------
 Changes for 2.4.0rc1
